@@ -12,6 +12,7 @@
  */
 package de.ipk_gatersleben.bit.bi.edal.primary_data;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Calendar;
 
 import org.apache.logging.log4j.Logger;
@@ -116,7 +117,22 @@ public class ContentNegotiator {
 		}
 
 		try {
-			Referenceable referencable = identifierType.getImplClass().newInstance();
+			Referenceable referencable = null;
+			try {
+				referencable = identifierType.getImplClass().getDeclaredConstructor().newInstance();
+			} catch (IllegalArgumentException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (InvocationTargetException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (NoSuchMethodException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (SecurityException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 
 			StringBuffer buffer = referencable
 					.negotiateContent(currentEntity.getVersionByDate(date).getPublicReference(identifierType), type);
